--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  color: #333;
+}
+a {
+  text-decoration: none !important;
+}
+/* main navbar */
 .main-navbar {
   border-bottom: 1px solid #ccc;
 }
@@ -14,11 +21,11 @@
 .main-navbar .top-navbar .brand-name {
   color: #fff;
   font-size: 23px;
-  padding-left: 50px;
 }
-.main-navbar .top-navbar .nav-link {
+.main-navbar .navbar .nav-item .nav-link {
+  padding: 12px 16px;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 .main-navbar .top-navbar .dropdown-menu {
@@ -39,10 +46,18 @@
 .main-navbar .navbar {
   padding: 0px;
 }
-.main-navbar .navbar .nav-item .nav-link {
-  padding: 8px 60px;
-  color: #000;
-  font-size: 16px;
+.nav-bar-item a {
+  display: inline-block;
+  padding: 0 12px;
+  font-size: 20px;
+  color: white;
+  text-decoration: none !important;
+}
+.navbar-midle-item a {
+  display: inline-block;
+  padding: 12px 20px;
+  color: black;
+  text-decoration: none !important;
 }
 .form-control {
   outline: none !important;
@@ -68,7 +83,7 @@
   margin-top: 25px;
   width: 100%;
   height: 65px;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   text-decoration: none !important;
   border-radius: 4px;
@@ -81,3 +96,47 @@
 }
 /* background-color: #ffa500; */
 /* background-color: #f5f5f5; */
+.card-text {
+  font-size: 15px;
+}
+.card-price {
+  display: flex;
+  font-size: 18px;
+}
+.btn btn-warning {
+  background-color: #ffa500;
+}
+
+.product-cart {
+  margin-bottom: 5px;
+}
+
+.custom-footer {
+  background-color: #f8f9fa;
+}
+/* Màu chữ đen */
+.custom-footer a {
+  color: #000;
+}
+/* Chỉnh các liên kết thành màu xanh khi di chuột qua */
+.custom-footer a:hover {
+  color: #17a2b8;
+}
+h2 {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+.introduce-product {
+  margin: 30px 0;
+}
+.product-cart1 {
+  margin-top: 30px;
+}
+.list-unstyled li a {
+  color: #333;
+}
+.carousel-item img {
+  height: 500px;
+  object-fit: cover;
+}
